--- a/pom.xml
+++ b/pom.xml
@@ -106,14 +106,14 @@
 			<!-- Use "provided" scope to keep storm out of the jar-with-dependencies 
 				For IntelliJ dev, intellij will load properly. -->
 			<scope>${provided.scope}</scope>
-		</dependency>
-		<dependency>
+		</dependency><dependency>
 			<groupId>org.apache.storm</groupId>
 			<artifactId>storm-core</artifactId>
 			<version>${project.version}</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.storm</groupId>
 			<artifactId>multilang-javascript</artifactId>
@@ -199,15 +199,6 @@
 						<sourceDirectory>src/clj</sourceDirectory>
 					</sourceDirectories>
 				</configuration>
-				<executions>
-					<execution>
-						<id>compile</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>compile</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 
 			<plugin>
