--- a/pom.xml
+++ b/pom.xml
@@ -106,14 +106,15 @@
 			<!-- Use "provided" scope to keep storm out of the jar-with-dependencies 
 				For IntelliJ dev, intellij will load properly. -->
 			<scope>${provided.scope}</scope>
-		</dependency><dependency>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.storm</groupId>
 			<artifactId>storm-core</artifactId>
 			<version>${project.version}</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.storm</groupId>
 			<artifactId>multilang-javascript</artifactId>
@@ -218,6 +219,19 @@
 					<includePluginDependencies>false</includePluginDependencies>
 					<classpathScope>compile</classpathScope>
 					<mainClass>${storm.topology}</mainClass>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>storm.starter</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
 				</configuration>
 			</plugin>
 		</plugins>
