--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
 			<scope>${provided.scope}</scope>
 		</dependency>
 		<dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <scope>compile</scope>
+        </dependency>
+		<dependency>
 			<groupId>org.apache.storm</groupId>
 			<artifactId>storm-core</artifactId>
 			<version>${project.version}</version>
