--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
-			<artifactId>kafka_2.10</artifactId>
+			<artifactId>kafka_2.9.1</artifactId>
 			<version>0.8.1.1</version>
 			<exclusions>
 				<exclusion>
@@ -177,12 +177,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
-			<artifactId>${storm.kafka.artifact.id}</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka-clients</artifactId>
-			<version>${storm.kafka.version}</version>
+			<version>0.8.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.storm</groupId>
