--- a/pom.xml
+++ b/pom.xml
@@ -152,14 +152,13 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.storm</groupId>
-			<artifactId>storm-metrics</artifactId>
-			<version>${project.version}</version>
+			<artifactId>storm-kafka</artifactId>
+			<version>1.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.storm</groupId>
-			<artifactId>storm-kafka</artifactId>
+			<artifactId>storm-metrics</artifactId>
 			<version>${project.version}</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.storm</groupId>
